Revert "refactor(接口测试): 删除ESB功能"
This reverts commit f4be75de5fe7696dd70124d77030cb79a299c8a5.